# NegFlow

./: .gitignore  AGENTS.md  README.md  STATUS.md  X5_FFF_to_PNG_automation_spec.md  pyproject.toml  requirements.txt  status.json
configs/: default.yaml
src/negflow/: __init__.py  __main__.py  fff_backend.py  metadata.py  runner.py
src/negflow/pipeline/: __init__.py  crop.py  final_export.py  grade_basic.py  invert.py  opencv_probe.py
tests/: test_runner.py
